# lient

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  client.rs  config.rs  lib.rs  mock.rs  model.rs  oauth.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: main.rs
crates/gui/ui/: lient.slint
