[package]
name = "lient-core"
version = "0.1.0"
edition = "2021"
description = "Lient core: a UI-agnostic Jira REST client (read + light write) for a fast personal desktop Jira app. No GUI dependencies."

[lib]
name = "lient_core"
path = "src/lib.rs"

[dependencies]
ureq = "2"                       # blocking HTTP + rustls TLS (no async runtime)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
