[package]
name = "lient-gui"
version = "0.1.0"
edition = "2021"
description = "Lient — the native Slint desktop Jira daily-driver, over lient-core."
default-run = "lient"

[[bin]]
name = "lient"
path = "src/main.rs"

[dependencies]
lient-core = { path = "../core" }
slint = "1.13"
serde_json = "1"
dirs = "5"
open = "5"
anyhow = "1"

[build-dependencies]
slint-build = "1.13"

[dev-dependencies]
# Headless Slint backend for GUI automation tests (construct the window, drive
# bindings, query elements) — no display needed.
i-slint-backend-testing = "1.13"
